--- a/Week_08/transaction/pom.xml
+++ b/Week_08/transaction/pom.xml
@@ -66,6 +66,19 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
+            <version>${sharding-sphere.version}</version>
+        </dependency>
+
+        <!-- 使用XA事务时，需要引入此模块 -->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-transaction-xa-core</artifactId>
+            <version>${sharding-sphere.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
